[gd_scene load_steps=5 format=3 uid="uid://cvyorkeldovi1"]

[ext_resource type="Texture2D" uid="uid://d1p28dd3heiov" path="res://Images/WhitePlus.png" id="1_kks7v"]
[ext_resource type="Script" path="res://GameWeek.gd" id="1_vcoe2"]
[ext_resource type="Texture2D" uid="uid://bsbn0s2je8g5y" path="res://Images/Cross.png" id="2_lrxoc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i7mlk"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vcoe2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 315.0
offset_bottom = 30.0
color = Color(0, 0.129412, 0.278431, 1)

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_right = 322.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_i7mlk")
text = "GW"
vertical_alignment = 1

[node name="GW" type="Label" parent="."]
offset_left = 32.0
offset_right = 246.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_i7mlk")
text = "1"
vertical_alignment = 1

[node name="AddButton" type="TextureButton" parent="."]
offset_left = 262.5
offset_top = 5.5
offset_right = 387.5
offset_bottom = 130.5
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("1_kks7v")

[node name="DeleteButton" type="TextureButton" parent="."]
offset_left = 292.5
offset_top = 7.5
offset_right = 392.5
offset_bottom = 107.5
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("2_lrxoc")

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
